fix, chore: pre tag with code label,...
pre tag had a label "code" but was not showing correctly above the pre tag box
readme link for every blog on the main page was taking to the wrong page

for better practice,
changed allowed hosts in settings.py
changed static_* and media_* in settings.py

--- a/static/blog/styles/blogPage.css
+++ b/static/blog/styles/blogPage.css
@@ -51,7 +51,7 @@
 .main-box-body pre::after{
     content: "code";
     position: absolute;
-    top: -50%;
+    top: -20px;
     right: 0px;
 }
 
